[gd_scene load_steps=14 format=3 uid="uid://b28wrkk8fgr6r"]

[ext_resource type="Script" uid="uid://dy4umbdb861xr" path="res://scenes/main scenes/Tutorial/TutorialEndTurn/tutorial_end_turn.gd" id="1_anrqf"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_b11ue"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_sdrqq"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="4_hq0xl"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/cards/card_manager.tscn" id="6_ylm2i"]
[ext_resource type="StyleBox" uid="uid://b1glg7x2bravg" path="res://assets/Themes/textBox.tres" id="7_weiuc"]
[ext_resource type="Script" uid="uid://2f4fi75scxes" path="res://addons/richtext2/richer_text_label.gd" id="8_tk7it"]
[ext_resource type="PackedScene" uid="uid://caj23gmo4lj52" path="res://scenes/main scenes/Match/clock.tscn" id="9_b11ue"]
[ext_resource type="Texture2D" uid="uid://brsnj1c5rwdei" path="res://assets/mana/Mana Pequena.png" id="10_mvvem"]
[ext_resource type="Texture2D" uid="uid://bnk0m0xeychc4" path="res://assets/mana/Mana Grande.png" id="11_30vdb"]
[ext_resource type="Script" uid="uid://bldjsxufh4kax" path="res://scenes/main scenes/Tutorial/TutorialForge2/player_hand_forge2.gd" id="11_mvvem"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bifc4"]
shader = ExtResource("2_b11ue")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30vdb"]

[node name="TutorialEndTurn" type="Node2D"]
script = ExtResource("1_anrqf")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_bifc4")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_sdrqq")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1090)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.501961)

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continuar"
metadata/_edit_use_anchors_ = true

[node name="PauseButton" parent="." instance=ExtResource("4_hq0xl")]
z_index = -1
metadata/_edit_use_anchors_ = true

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Voltar"
metadata/_edit_use_anchors_ = true

[node name="CardManager" parent="." instance=ExtResource("6_ylm2i")]

[node name="Clock" parent="." instance=ExtResource("9_b11ue")]
offset_left = 1691.5
offset_top = 476.0
offset_right = 1827.5
offset_bottom = 612.0
disabled = false

[node name="PlayerHandEndTurn" type="Node2D" parent="."]
position = Vector2(960, 1080)
script = ExtResource("11_mvvem")

[node name="Area2D" type="Area2D" parent="PlayerHandEndTurn"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHandEndTurn/Area2D"]
shape = SubResource("RectangleShape2D_30vdb")

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 220)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 919.0
offset_top = 233.0
offset_right = 1680.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_styles/normal = ExtResource("7_weiuc")
bbcode_enabled = true
fit_content = true
script = ExtResource("8_tk7it")
bbcode = "[fill]Todo turno você terá 60 segundos para fazer suas ações. Se quiser acabar antes, clique no temporizador para passar o turno. [/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 40
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://2f4fi75scxes"

[node name="TextBox2" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 165)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 872.0
offset_top = 703.0
offset_right = 1596.0
offset_bottom = 880.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_styles/normal = ExtResource("7_weiuc")
bbcode_enabled = true
fit_content = true
script = ExtResource("8_tk7it")
bbcode = "[fill]Se você finalizar o turno sem gastar nenhuma mana você irá ganhar um carta adicional[/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 40
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://2f4fi75scxes"

[node name="Mana" type="Node" parent="."]

[node name="ManaP1" type="Sprite2D" parent="Mana"]
position = Vector2(1758, 933)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_mvvem")

[node name="ManaP2" type="Sprite2D" parent="Mana"]
position = Vector2(1760, 825)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_mvvem")

[node name="ManaG" type="Sprite2D" parent="Mana"]
position = Vector2(1763, 705)
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_30vdb")

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
[connection signal="mouse_entered" from="PlayerHandEndTurn/Area2D" to="PlayerHandEndTurn" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="PlayerHandEndTurn/Area2D" to="PlayerHandEndTurn" method="_on_area_2d_mouse_exited"]
